--- a/index.html
+++ b/index.html
@@ -3,78 +3,124 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rahul Jha | My Journey</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Rahul Jha | Kiln Expert Portfolio</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header img {
+      border-radius: 50%;
+      width: 140px;
+      height: 140px;
+      object-fit: cover;
+      border: 4px solid white;
+    }
+    h1 {
+      margin-top: 1rem;
+      font-size: 2rem;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 1rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
+    }
+    .quote {
+      font-style: italic;
+      background: #ecf0f1;
+      padding: 1rem;
+      border-left: 5px solid #3498db;
+      margin-bottom: 2rem;
+    }
+    .album img {
+      width: 100%;
+      max-width: 300px;
+      border-radius: 10px;
+      margin: 1rem;
+    }
+    footer {
+      background: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      margin-top: 2rem;
+    }
+    .contact a {
+      color: #00aced;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Rahul Jha</h1>
-    <p>Mechanical Engineer | Kiln Specialist | AI Enthusiast</p>
+    <img src="rahul_offic_inj.jpg" alt="Rahul Jha">
+    <h1>Rahul Jha - Kiln Expert & Mechanical Engineer</h1>
+    <p>Helping industries achieve kiln perfection & performance</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#album">Album</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
-
-  <nav>
-    <a href="#about">About Me</a>
-    <a href="#skills">My Skills</a>
-    <a href="#hobbies">Hobbies</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
-    <a href="#message">Message</a>
-  </nav>
 
   <section id="about">
     <h2>About Me</h2>
-    <p>
-      Hello! I’m Rahul Jha from Bihar. I completed my Mechanical Engineering from RTU (2020).
-      I’ve worked at JSW Steel and currently at Allan Smith Engineering Pvt. Ltd.
-      Passionate about combining Mechanical Engineering with AI.
-    </p>
+    <p>I’m Rahul Jha, a mechanical engineer with hands-on expertise in rotary kiln systems, alignment, slope correction, and operational efficiency.</p>
+    <div class="quote">“Bhai, jab tak alignment sahi nahi, production tight hi rahega!”</div>
+    <div class="quote">“Jab bhi chaho baat karna, mai yahi hoon – ek dost ki tarah.”</div>
   </section>
 
   <section id="skills">
-    <h2>My Skills & Expertise</h2>
+    <h2>Key Skills</h2>
     <ul>
-      <li>Rotary Kiln Alignment</li>
-      <li>Hot & Cold Kiln Services</li>
-      <li>SolidWorks & Design</li>
-      <li>Python for Engineering Applications</li>
-      <li>Basic AI & ML Understanding</li>
+      <li>🔥 Kiln slope correction using plan & elevation views</li>
+      <li>🌀 Shell profile & 3D thermal expansion analysis</li>
+      <li>🔧 Tyre, Roller, Chair pad alignment with live feedback</li>
+      <li>📊 Cold/Hot alignment conclusion with efficiency gain insights</li>
     </ul>
   </section>
 
-  <section id="hobbies">
-    <h2>Hobbies</h2>
-    <ul>
-      <li>✍️ Shayari – Expressing feelings through words</li>
-      <li>🌍 Traveling – Exploring nature and new places</li>
-      <li>📸 Photography – Capturing memories</li>
-    </ul>
-  </section>
-
-  <section id="gallery">
-    <h2>My Photos</h2>
-    <div class="gallery">
-      <img src="assets/images/photo1.jpg" alt="Me 1">
-      <img src="assets/images/photo2.jpg" alt="Me 2">
-      <img src="assets/images/photo3.jpg" alt="Work site">
+  <section id="album">
+    <h2>Photo Album</h2>
+    <p>College Days | Work Life | Fun Moments</p>
+    <div class="album">
+      <img src="rahul jpg.jpg" alt="College Life">
+      <img src="rahul_offic_inj.jpg" alt="Work Profile">
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: rahul.jha@email.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/rahul-jha" target="_blank">My Profile</a></p>
-  </section>
-
-  <section id="message">
-    <h2>A Friendly Note</h2>
-    <p>
-      I'm happy to help you if you want to share something or just be a friend.
-      Trust me, I'm a good listener. Haha! 😄
+    <p class="contact">
+      📧 Email: <a href="mailto:ahamrahuljha@gmail.com">ahamrahuljha@gmail.com</a><br>
+      📞 WhatsApp: <a href="tel:+9113167508">+91 13167508</a><br>
+      🔗 LinkedIn: <a href="https://www.linkedin.com/in/rahul-jha">rahul-jha</a>
     </p>
+    <div class="quote">Feel free to connect – treat me like a friend. 😊</div>
   </section>
 
   <footer>
-    <p>© 2025 Rahul Jha. All rights reserved.</p>
+    Made with ❤️ by Rahul & Varsha
   </footer>
 </body>
 </html>
