--- a/index.html
+++ b/index.html
@@ -153,7 +153,20 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>Hi, I’m Rahul — a rotary kiln specialist with a dynamic approach to mechanical engineering. I integrate AI-driven techniques to ensure predictive maintenance and performance optimization.</p>
+    <p><strong>My Story – Rahul Jha</strong><br>
+    Hello! My name is Rahul Jha. I was born and raised in a middle-class Hindu Brahmin family in Mithila, Bihar — a region rich in culture but still far behind when it comes to modern technology and quality education. Despite the challenges, I completed my B.Sc. in Physics, Chemistry, and Math, and later got admission into Rajasthan Technical University for a B.Tech in Mechanical Engineering.<br><br>
+    My college years were among the best chapters of my life. I made amazing friends, learned new perspectives, and connected with the world in ways I hadn’t before. In 2020, I graduated with 70%, ready to begin a new chapter.<br><br>
+    But the real world wasn’t easy. With no proper guidance, I found myself lost in the race for a job. I reached out to relatives and professionals—not to ask for jobs, but simply for direction. What should I learn? Where should I begin? Unfortunately, I didn’t get the clarity I hoped for.<br><br>
+    Out of frustration, I accepted a contract job with JSW Steel—just for exposure. It gave me hands-on experience with steel structures, assemblies, and industrial erection work like junction houses. But the real learning was something else: I realized how rapidly the world was changing with automation, smart tools, and artificial intelligence.<br><br>
+    That realization sparked a fire in me.<br><br>
+    I quit my job to take a pause and plan. Like they say—"When you're confused, take a break." I wanted to learn something meaningful. Something that not only adds to my mechanical foundation but also connects with the future.<br><br>
+    During this time, I got an offer from Viraj Steel, but had to reach Mumbai within 2–3 days. Bihar to Mumbai by train takes over 36 hours—so for the first time in my life, I booked a flight. Sadly, I missed it. I had never missed a bus or train before, and this loss (including no refund) hit me hard.<br><br>
+    But instead of breaking down, I made a bold move: I used all my savings to buy a laptop and decided to invest in knowledge.<br><br>
+    I started learning about mechanical design tools and, more importantly, Python, AI, and machine learning—because I believe these technologies are the future of the mechanical industry.<br><br>
+    What I love most about coding and AI is that even if something fails, you can quickly debug, regenerate, or modify it—unlike mechanical systems, where a single failure can cost the whole project. This difference fascinated me.<br><br>
+    Today, I dream of being someone who connects advanced technology with traditional mechanical systems—bridging the gap between AI and industrial machinery.<br><br>
+    And by the grace of God, I got an opportunity to work with Allan Smith Engineering Pvt. Ltd.—a company known for its deep mechanical expertise in heavy industries like steel, cement, refinery, chemicals, paper, and carbon. We work globally, especially in Africa and the Middle East, and specialize in rotary kilns and alignment services.<br><br>
+    This is just the beginning. I’m still learning, still exploring, and still building a future where tradition meets innovation.</p>
   </section>
 
   <section id="skills">
