--- a/index.html
+++ b/index.html
@@ -138,10 +138,13 @@
   <footer>
     <p>I will be happy to be of any help to you. You can contact me anytime. Believe me, I'm a good listener and will try to resolve your concern. <br>Thank you ❤️</p>
     <div class="footer-links">
-      <a href="mailto:rahul@example.com">📧 Email</a>
+      <a href="mailto:ahamrahul.official@gmail.com">📧 Email</a>
       <a href="https://linkedin.com/in/ahamrahul" target="_blank">💼 LinkedIn</a>
       <a href="https://github.com/ahamrahul" target="_blank">💻 GitHub</a>
       <a href="https://instagram.com/ahamrahul" target="_blank">📸 Instagram</a>
+      <a href="https://youtube.com/@ahamrahul" target="_blank">▶️ YouTube</a>
+      <a href="https://twitter.com/ahamrahul" target="_blank">🐦 Twitter</a>
+      <a href="/path/to/rahul_resume.pdf" target="_blank" download>📄 Resume</a>
     </div>
     <div class="ticker">
       <p>JSW Steel &nbsp;&nbsp;&nbsp; Tata Steel &nbsp;&nbsp;&nbsp; SRF &nbsp;&nbsp;&nbsp; Allan Smith Engineering &nbsp;&nbsp;&nbsp; Larsen & Toubro &nbsp;&nbsp;&nbsp; Shree Cement</p>
