--- a/index.html
+++ b/index.html
@@ -160,11 +160,17 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>Rotary Kiln Design & Analysis</li>
       <li>Stress and Shell Profile Analysis</li>
       <li>Predictive Maintenance</li>
       <li>Artificial Intelligence & Machine Learning</li>
       <li>3D Data Interpretation</li>
+      <li>✔ Kiln or Rotary Drum Erection & Commissioning</li>
+       <li>✔ Kiln Alignment & Maintenance: Hot/Cold, Girth Gear, Shell Profiling</li>
+       <li>✔ Tools: Auto Level, Total Station, Roto-Dia, Shell Ovality Sensor</li>
+       <li>✔ AI & Python: NumPy, Pandas, Matplotlib, Predictive Maintenance</li>
+       <li>✔ SolidWorks, MS Office</li>
+       <li>✔ Process Optimization & AI-Driven Maintenance</li>
+       <li>✔ Languages: Hindi, English, Maithili</li>
     </ul>
   </section>
 
@@ -191,8 +197,9 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: rahul@example.com</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/ahamrahul" target="_blank">ahamrahul</a></p>
+   <p>Mobile/WhatsApp: <strong>+91 9113167508</strong></p>
+     <p>Email: <a href="mailto:ahamrahuljha@gmail.com">ahamrahuljha@gmail.com</a></p>
+     <p>LinkedIn: <a href="https://www.linkedin.com/in/ahamrahul" target="_blank">linkedin.com/in/rahul-jha</a></p>
   </section>
 
   <footer>
